[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/bullet bill.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Bullet Bill.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/gun shot.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.0
height = 10.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.75, 1 )

[node name="Bullet Bill" type="Area2D"]
scale = Vector2( 4, 4 )
z_index = 1
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Head" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( 3.5, -28.75 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 6.25, -3.8147e-06 )
scale = Vector2( 11.9625, 5.1125 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.86
max_distance = 1170.0
[connection signal="body_entered" from="." to="." method="_on_Bullet_Bill_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bullet_Bill_body_exited"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
